--- a/iletişim.html
+++ b/iletişim.html
@@ -127,7 +127,7 @@
     </div>
 
     <label for="metin">Mesajınız</label>
-    <textarea name="metin" id="metin" class="ckeditor"></textarea>
+    <textarea name="metin" id="metin" class="form-control"></textarea></br>
 <button type="button" class="btn btn-primary">Gönder</button>
 
 
